# verifiedUniqueAliases

./: .dockerignore  .dstack.yml  .env.example  .gitattributes  .gitignore  AGENTS.md  B.sha256  BUILD_NATIVE.md  Cargo.toml  DEBUG_CHECKLIST.md  Dockerfile  Dockerfile.build-rust  Dockerfile.confidential-space  Dockerfile.dstack  Dockerfile.repro  Dockerfile.test  FINAL_SUMMARY.md  README.md  README_GCP_ATTESTATION_FIX.md  Vagrantfile  analyze-partitions.sh  app.py  boot-final.sh  boot-usb.sh  build-and-deploy.sh  build-confidential-space-docker.sh  build-docker.sh  build-dstack-guest-image.sh  build-fallback.sh  build-gcp-gpt-image.sh  build-in-chroot-pkg.sh  build-in-chroot.sh  build-in-qemu.sh  build-initramfs-dracut.sh  build-initramfs-tools (copy).sh  build-initramfs-tools.sh  build-inside-vm.sh  build-manifest.json  build-native-efi-image.sh  build-native.sh  (+98 more)
.cargo/: config.toml
.github/workflows/: .trigger7  build-attest.yml  test-initramfs.yml
.idx/: dev.nix
comp1/lib/x86_64-linux-gnu/: libcurl.so.4  libkeyutils.so.1  liblber.so.2  libnghttp3.so.9  libpsl.so.5  libtss2-rc.so.0
comp1/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/: modules.alias  modules.devname
comp1/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/kernel/drivers/acpi/: fan.ko.xz
comp1/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/kernel/drivers/ata/: ahci.ko.xz  libata.ko.xz
comp1/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/kernel/drivers/block/: rbd.ko.xz  virtio_blk.ko.xz  xen-blkfront.ko.xz
comp1/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/kernel/lib/: crc-itu-t.ko.xz  libcrc32c.ko.xz
comp1/usr/lib/x86_64-linux-gnu/: ld-linux-x86-64.so.2  libtss2-tcti-device.so.0.0.0
comp2/lib/: modules
comp2/lib/x86_64-linux-gnu/: libcom_err.so.2  libidn2.so.0  libnettle.so.8  libngtcp2.so.16  libresolv.so.2  libtss2-sys.so.1  libtss2-tctildr.so.0  libz.so.1
comp2/sbin/: insmod
comp2/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/: modules.dep
comp2/usr/lib/x86_64-linux-gnu/: libtss2-rc.so.0.0.0
dracut-conf/: dracut.conf
dracut-local/modules.d/99paypal-auth-vm/: module-setup.sh
dracut-module/99paypal-auth-vm/: dracut.conf  module-setup.sh  parse-paypal-auth.sh  start-app.sh
dracut-module/paypal-auth-vm/: build-initramfs-dracut.sh  init-disk.sh  module-setup.sh
dracut-modules/99paypal-auth-vm/: module-setup.sh
dstack-output/paypal-auth-dstack-0.1.0/: digest.txt
hooks/: paypal-auth
initramfs_cfg/: modules
initramfs_cfg/hooks/: paypal-auth  zz-reproducible.sh
initramfs_cfg/scripts/init-premount/: paypal-auth
initrd-root/: init
oci-monitor/: func.py  requirements.txt
scratch/: parse_quote.py
scripts/init-premount/: paypal-auth
src/: main.rs
src.backup_v28/: main.rs.backup  main.rs.broken  paypal.pem
test-repro/out2/paypal-auth-dstack-0.1.0/: sha256sum.txt
v4_1/lib/x86_64-linux-gnu/: libc.so.6  libcurl-gnutls.so.4  libffi.so.8  libgnutls.so.30  libgssapi_krb5.so.2  libk5crypto.so.3  libldap.so.2  libnghttp2.so.14  librtmp.so.1  libsasl2.so.2  libselinux.so.1  libssl.so.3  libtss2-esys.so.0  libtss2-mu.so.0  libzstd.so.1
v4_1/sbin/: depmod
v4_1/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/: modules.symbols
v4_1/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/kernel/crypto/: blake2b_generic.ko.xz
v4_1/usr/lib/x86_64-linux-gnu/: libgnutls.so.30.40.3  libssl.so.3  libtss2-esys.so.0.0.1
v4_2/lib/x86_64-linux-gnu/: libbpf.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libcap.so.2  libcrypto.so.3  libelf.so.1  libgcc_s.so.1  libgmp.so.10  libhogweed.so.6  libkrb5.so.3  libkrb5support.so.0  libm.so.6  libmnl.so.0  libngtcp2_crypto_gnutls.so.8  libp11-kit.so.0  libpcre2-8.so.0  libssh2.so.1  libtasn1.so.6  libunistring.so.5
v4_2/lib64/: ld-linux-x86-64.so.2
v4_2/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/: modules.softdep
v4_2/usr/lib/modules/6.12.74+deb13+1-cloud-amd64/kernel/crypto/: xor.ko.xz
v4_2/usr/lib/x86_64-linux-gnu/: libc.so.6  libtss2-mu.so.0.0.1  libtss2-sys.so.1.0.1  libtss2-tctildr.so.0.0.0
(+160 files in other folders)
