[package]
name = "paypal-auth-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
tokio = { version = "=1.48.0", features = ["full"] }
axum = "=0.8.7"
tower = { version = "=0.5.2", features = ["util"] }
tower-http = { version = "=0.6.7", features = ["trace"] }
hyper = { version = "=1.8.1", features = ["full"] }
hyper-util = { version = "=0.1.18", features = ["tokio", "server", "server-auto"] }

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"

# HTTP client (native-tls/openssl)
reqwest = { version = "=0.12.24", features = ["json", "native-tls"], default-features = false }

# ACME (Google Public CA)
instant-acme = { version = "=0.8.4", default-features = false, features = ["ring", "hyper-rustls"] }

# TLS server (openssl)
openssl = { version = "=0.10.75" }
tokio-openssl = { version = "=0.6.5" }

# Cryptography
base64 = "=0.22.1"
sha2 = "=0.10.9"

# Utilities
tracing = "=0.1.43"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
parking_lot = "=0.12.5"
chrono = "=0.4.42"
html-escape = "=0.2.13"
urlencoding = "=2.1.3"
socket2 = "=0.5.8"

[profile.release]
opt-level = 1
lto = false
codegen-units = 4
strip = false
