[package]
name = "paypal-auth-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
tokio = { version = "=1.48.0", features = ["full"] }
axum = { version = "=0.8.7", features = ["macros"] }
tower = { version = "=0.5.2", features = ["util"] }
tower-http = { version = "=0.6.7", features = ["trace"] }
hyper = { version = "=1.8.1", features = ["full"] }
hyper-util = { version = "=0.1.18", features = ["tokio", "server", "server-auto"] }

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
serde_urlencoded = "0.7"

# HTTP client (native-tls/openssl)
reqwest = { version = "=0.12.24", features = ["json", "native-tls", "blocking"], default-features = false }

# ACME (Google Public CA)
acme2-eab = "0.5"

# TLS server (openssl)
openssl = "0.10"
tokio-openssl = { version = "=0.6.5" }

# System (PID-1 init: mount, setsockopt SO_BINDTODEVICE)
libc = "=0.2.174"

# Cryptography
base64 = "=0.22.1"
sha2 = "=0.10.9"

# Utilities
tracing = "=0.1.43"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
parking_lot = "=0.12.5"
chrono = "=0.4.42"
html-escape = "=0.2.13"
urlencoding = "=2.1.3"
socket2 = "=0.5.8"
rand = "=0.8.5"
aes-gcm = "0.10"
hex = "0.4"
rcgen = "0.14"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
strip = false
panic = "abort"
